packages/switchy/schema/cli/tests/snapshots/validate_simple_test__validate_command_help.snap
---
source: packages/switchy/schema/cli/tests/validate_simple_test.rs
expression: clean_output
---
stdout:
Validate checksums of applied migrations

Usage: switchy-migrate validate [OPTIONS] --database-url <DATABASE_URL>

Options:
  -d, --database-url <DATABASE_URL>
          Database connection URL [env: SWITCHY_DATABASE_URL=]
  -m, --migrations-dir <MIGRATIONS_DIR>
          Directory containing migrations [env: SWITCHY_MIGRATIONS_DIR=] [default: ./migrations]
      --migration-table <MIGRATION_TABLE>
          Migration table name [env: SWITCHY_MIGRATION_TABLE=] [default: __switchy_migrations]
      --strict
          Exit with error code if mismatches found
      --verbose
          Show detailed checksum values
      --duckdb-mode <DUCKDB_MODE>
          `DuckDB` routing mode (overrides environment when provided) [env: SWITCHY_DUCKDB_MODE=] [possible values: deterministic, pooled]
      --duckdb-consistency <DUCKDB_CONSISTENCY>
          `DuckDB` consistency policy (overrides environment when provided) [env: SWITCHY_DUCKDB_CONSISTENCY=] [possible values: strict, relaxed]
  -h, --help
          Print help

stderr:

status: ExitStatus(unix_wait_status(0))
