packages/switchy/schema/cli/tests/snapshots/validate_simple_test__validate_empty_migrations_verbose.snap
---
source: packages/switchy/schema/cli/tests/validate_simple_test.rs
expression: clean_output
---
Validating migration checksums
==============================
Migrations directory: [MIGRATIONS_DIR]
Migration table: __switchy_migrations
